Restructure Project to Use DI

--- a/YnabProgressConsole.Tests/YnabProgressConsole.Tests.csproj
+++ b/YnabProgressConsole.Tests/YnabProgressConsole.Tests.csproj
@@ -20,4 +20,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\YnabProgressConsole\YnabProgressConsole.csproj" />
+    </ItemGroup>
+
 </Project>
