--- a/YnabProgressConsole/YnabProgressConsole.csproj
+++ b/YnabProgressConsole/YnabProgressConsole.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="ConsoleTables" Version="2.6.2" />
+      <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
     <ItemGroup>
