--- a/YnabCli/YnabCli.csproj
+++ b/YnabCli/YnabCli.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\YnabCli.Commands\YnabCli.Commands.csproj" />
+      <ProjectReference Include="..\YnabCli.Database\YnabCli.Database.csproj" />
       <ProjectReference Include="..\YnabCli.ViewModels\YnabCli.ViewModels.csproj" />
       <ProjectReference Include="..\YnabCli.Instructions\YnabCli.Instructions.csproj" />
       <ProjectReference Include="..\Ynab\Ynab.csproj" />
