--- a/YnabCli.ViewModels/YnabCli.ViewModels.csproj
+++ b/YnabCli.ViewModels/YnabCli.ViewModels.csproj
@@ -8,10 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="ConsoleTables" Version="2.6.2" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\YnabCli.Database\YnabCli.Database.csproj" />
       <ProjectReference Include="..\Ynab\Ynab.csproj" />
     </ItemGroup>
 
