--- a/YnabCli.Commands.Reporting/YnabCli.Commands.Reporting.csproj
+++ b/YnabCli.Commands.Reporting/YnabCli.Commands.Reporting.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\YnabCli.Commands\YnabCli.Commands.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="AverageSpending\" />
+    </ItemGroup>
+
 </Project>
