--- a/YnabCli.Commands/YnabCli.Commands.csproj
+++ b/YnabCli.Commands/YnabCli.Commands.csproj
@@ -14,7 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\YnabCli.Database\YnabCli.Database.csproj" />
       <ProjectReference Include="..\YnabCli.ViewModels\YnabCli.ViewModels.csproj" />
-      <ProjectReference Include="..\YnabCli.Instructions\YnabCli.Instructions.csproj" />
+      <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
     </ItemGroup>
 
 </Project>
