--- a/YnabCli/YnabCli.csproj
+++ b/YnabCli/YnabCli.csproj
@@ -14,7 +14,7 @@
       <ProjectReference Include="..\YnabCli.Commands.Reporting\YnabCli.Commands.Reporting.csproj" />
       <ProjectReference Include="..\YnabCli.Database\YnabCli.Database.csproj" />
       <ProjectReference Include="..\YnabCli.ViewModels\YnabCli.ViewModels.csproj" />
-      <ProjectReference Include="..\YnabCli.Instructions\YnabCli.Instructions.csproj" />
+      <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
       <ProjectReference Include="..\Ynab\Ynab.csproj" />
     </ItemGroup>
 
