--- a/Cli.Commands.Abstractions/Cli.Commands.Abstractions.csproj
+++ b/Cli.Commands.Abstractions/Cli.Commands.Abstractions.csproj
@@ -8,11 +8,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Cli.Instructions.Abstractions\Cli.Instructions.Abstractions.csproj" />
-      <ProjectReference Include="..\YnabCli.Abstractions\YnabCli.Abstractions.csproj" />
+      <ProjectReference Include="..\Cli.Outcomes\Cli.Outcomes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
 </Project>
