--- a/YnabCli.Commands/YnabCli.Commands.csproj
+++ b/YnabCli.Commands/YnabCli.Commands.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
       <ProjectReference Include="..\YnabCli.Database\YnabCli.Database.csproj" />
       <ProjectReference Include="..\YnabCli.ViewModels\YnabCli.ViewModels.csproj" />
       <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
