--- a/Cli.Commands.Abstractions/Cli.Commands.Abstractions.csproj
+++ b/Cli.Commands.Abstractions/Cli.Commands.Abstractions.csproj
@@ -7,11 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Cli.Abstractions\Cli.Abstractions.csproj" />
       <ProjectReference Include="..\Cli.Instructions.Abstractions\Cli.Instructions.Abstractions.csproj" />
-      <ProjectReference Include="..\Cli.Outcomes\Cli.Outcomes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="ConsoleTables" Version="2.6.2" />
+      <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
