--- a/Cli.Workflow.Abstractions/Cli.Workflow.Abstractions.csproj
+++ b/Cli.Workflow.Abstractions/Cli.Workflow.Abstractions.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Cli.Abstractions\Cli.Abstractions.csproj" />
+    </ItemGroup>
+
 </Project>
