--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -9,7 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
       <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
-      <ProjectReference Include="..\Cli.Outcomes\Cli.Outcomes.csproj" />
+      <ProjectReference Include="..\Cli.Workflow\Cli.Workflow.csproj" />
     </ItemGroup>
 
     <ItemGroup>
