Deleted Management Class Library

--- a/Cli.Spendfulness.Commands.Management/Cli.Spendfulness.Commands.Management.csproj
+++ b/Cli.Spendfulness.Commands.Management/Cli.Spendfulness.Commands.Management.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Accounts\" />
+    </ItemGroup>
+
 </Project>
