--- a/SpendfulnessCli.Aggregation/SpendfulnessCli.Aggregation.csproj
+++ b/SpendfulnessCli.Aggregation/SpendfulnessCli.Aggregation.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Cli.Abstractions\Cli.Abstractions.csproj" />
       <ProjectReference Include="..\Spendfulness.Database\Spendfulness.Database.csproj" />
+      <ProjectReference Include="..\SpendfulnessCli.Abstractions\SpendfulnessCli.Abstractions.csproj" />
       <ProjectReference Include="..\Ynab\Ynab.csproj" />
     </ItemGroup>
 
