--- a/Cli.Workflow/Cli.Workflow.csproj
+++ b/Cli.Workflow/Cli.Workflow.csproj
@@ -10,6 +10,7 @@
       <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
       <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
       <ProjectReference Include="..\Cli.Workflow.Abstractions\Cli.Workflow.Abstractions.csproj" />
+      <ProjectReference Include="..\SpendfulnessCli.Aggregation\SpendfulnessCli.Aggregation.csproj" />
     </ItemGroup>
 
 </Project>
