--- a/SpendfulnessCli.Commands.Reporting/SpendfulnessCli.Commands.Reporting.csproj
+++ b/SpendfulnessCli.Commands.Reporting/SpendfulnessCli.Commands.Reporting.csproj
@@ -28,4 +28,8 @@
       <Compile Remove="AverageYearlySpending\AverageYearlySpendingCliCliCommandHandler 2.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Table\" />
+    </ItemGroup>
+
 </Project>
