--- a/Cli.Workflow.Tests/Cli.Workflow.Tests.csproj
+++ b/Cli.Workflow.Tests/Cli.Workflow.Tests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
       <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="NUnit" Version="4.4.0" />
@@ -19,10 +20,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Cli.Workflow\Cli.Workflow.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Commands\" />
     </ItemGroup>
 
 </Project>
