#157: Added Way To Manage Missing Outcomes

--- a/Cli.Workflow.Abstractions/Cli.Workflow.Abstractions.csproj
+++ b/Cli.Workflow.Abstractions/Cli.Workflow.Abstractions.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Cli.Abstractions\Cli.Abstractions.csproj" />
+      <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
