--- a/Cli.Workflow.Commands/Cli.Workflow.Commands.csproj
+++ b/Cli.Workflow.Commands/Cli.Workflow.Commands.csproj
@@ -8,9 +8,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
-      <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
+      <ProjectReference Include="..\Cli.Instructions.Abstractions\Cli.Instructions.Abstractions.csproj" />
       <ProjectReference Include="..\Cli.Workflow.Abstractions\Cli.Workflow.Abstractions.csproj" />
-      <ProjectReference Include="..\Cli.Workflow.Commands\Cli.Workflow.Commands.csproj" />
     </ItemGroup>
 
 </Project>
