--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     </ItemGroup>
 
 </Project>
