#75: Added PIR Command

--- a/SpendfulnessCli.Commands.CsvExports/SpendfulnessCli.Commands.CsvExports.csproj
+++ b/SpendfulnessCli.Commands.CsvExports/SpendfulnessCli.Commands.CsvExports.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="PersonalInflationRate\" />
+      <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
