--- a/Spendfulness.Csv/Spendfulness.Csv.csproj
+++ b/Spendfulness.Csv/Spendfulness.Csv.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Spendfulness.Csv</AssemblyName>
+        <RootNamespace>Spendfulness.Csv</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
