--- a/SpendfulnessCli.Sync/SpendfulnessCli.Sync.csproj
+++ b/SpendfulnessCli.Sync/SpendfulnessCli.Sync.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CsvHelper" Version="33.1.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Spendfulness.Csv\Spendfulness.Csv.csproj" />
       <ProjectReference Include="..\Spendfulness.Database\Spendfulness.Database.csproj" />
       <ProjectReference Include="..\SpendfulnessCli.Aggregation\SpendfulnessCli.Aggregation.csproj" />
       <ProjectReference Include="..\SpendfulnessCli.CliTables\SpendfulnessCli.CliTables.csproj" />
