--- a/Spendfulness.Database.Cosmos/Spendfulness.Database.Cosmos.csproj
+++ b/Spendfulness.Database.Cosmos/Spendfulness.Database.Cosmos.csproj
@@ -7,8 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="ConsoleTables" Version="2.7.0" />
+      <PackageReference Include="Azure.Identity" Version="1.17.1" />
+      <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.57.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Ynab\Ynab.csproj" />
     </ItemGroup>
 
 </Project>
