--- a/SpendfulnessCli.Commands.Chat/SpendfulnessCli.Commands.Chat.csproj
+++ b/SpendfulnessCli.Commands.Chat/SpendfulnessCli.Commands.Chat.csproj
@@ -9,7 +9,10 @@
     <ItemGroup>
       <ProjectReference Include="..\Cli.Commands.Abstractions\Cli.Commands.Abstractions.csproj" />
       <ProjectReference Include="..\Cli.Instructions\Cli.Instructions.csproj" />
+      <ProjectReference Include="..\Spendfulness.Database.Cosmos\Spendfulness.Database.Cosmos.csproj" />
+      <ProjectReference Include="..\Spendfulness.Database.Sqlite\Spendfulness.Database.Sqlite.csproj" />
       <ProjectReference Include="..\Spendfulness.OpenAI\Spendfulness.OpenAI.csproj" />
+      <ProjectReference Include="..\Ynab\Ynab.csproj" />
     </ItemGroup>
 
 </Project>
