Added Command to Clear Chat Database

--- a/SpendfulnessCli/appsettings.json
+++ b/SpendfulnessCli/appsettings.json
@@ -2,5 +2,9 @@
     "instruction": {
         "prefix": "/",
         "argumentPrefix": "--"
+    },
+    "cosmos": {
+        "perSecondRuLimit": 1000,
+        "perTransactionCreateRuCost": 9
     }
 }
